# godot-haskell

./: .gitignore  .gitmodules  .hlint.yaml  .travis.yml  LICENSE  README.md  api.json  cabal.project  default.nix  godot-haskell.cabal  godot-haskell.hsfiles  godot-haskell.nix  hie.yaml  mkdemo.sh  nixpkgs-version.json  package.yaml  pinned-nixpkgs.nix  release.nix  shell-spacemacs-hie.nix  shell.nix  stack-shell.nix  stack.yaml  updateApiJSON.sh
app-classgen/: Main.hs
cbits/: util.h
classgen/: README.md  classgen.nix  default.nix  garbo  godot-haskell-classgen.cabal  package.yaml  release.nix  stack.yaml
classgen/app-classgen/: Main.hs
classgen/src-classgen/Classgen/: Docs.hs  Module.hs  Spec.hs  Utils.hs
demo/: .gitignore  Makefile  README.md  godot-haskell.nix  myproject.cabal  package.yaml  pinned-nixpkgs.nix  shell.nix  stack-shell.nix  stack.yaml
demo/ffi/cbits/: flib.c
demo/game/: Enemy Bug.gdns  HUD.gdns  HUD.tres  HUD.tscn  Main.gdns  Main.tscn  Mob.tscn  Player.gdns  Player.tscn  TreeShort.gdns  default_bus_layout.tres  project.godot
demo/game/lib/: libmyproject.gdnlib
demo/src/: Lib.hs  Util.hs
demo/src/Game/: HUD.hs  Main.hs  Mob.hs  Player.hs
demo/src/Project/: Requirements.hs  Scenes.hs  Support.hs
examples/dodge-the-creeps/: LICENSE  Makefile  README.md  Support.hs  myproject.cabal  package.yaml  pinned-nixpkgs.nix  stack.yaml
examples/rss-reader/: Makefile  hie.yaml  myproject.cabal  package.yaml
examples/top-down-ten-minutes/: Makefile  hie.yaml  package.yaml  shell.nix  stack-shell.nix  top-down-ten-minutes.cabal
nix/: spacemacs-hie.nix
nix/pinned/: all-hies.json  default.nix  godot-haskell.json  hie.nix  nixpkgs.json
project-generator/: Main.hs
src/: Godot.hs
src-classgen/Classgen/: Module.hs  Spec.hs  Utils.hs
src-generate/: Generate.hs  Spec.hs  Types.hs
src-generate/Types/: Internal.hs
src/Godot/: Api.hs  Gdnative.hs  Methods.hs  Nativescript.hs
template/: README.md  godot-haskell.hsfiles  mkdemo.sh  update-template.sh
template/demo/: LICENSE  Makefile  README.md  demo.cabal  godot-haskell.nix  pinned-nixpkgs.nix  shell.nix  stack-shell.nix  stack.yaml
template/demo/ffi/cbits/: flib.c
template/demo/ffi/flib/: FLib.hs
template/demo/game/: Main.gdns  Main.tscn  project.godot
template/demo/game/lib/: libdemo.gdnlib
template/demo/src/: Lib.hs
(+1416 files in other folders)
