cabal-version: 1.12

name:           demo
version:        0.0.0.0
description:    Please see the README on Github at <https://github.com//demo#readme>
homepage:       https://github.com//demo#readme
bug-reports:    https://github.com//demo/issues
author:         
maintainer:     
copyright:      
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com//demo

library
  exposed-modules: Lib
  hs-source-dirs: src
  ghc-options:
    -Wall
    -fwarn-unused-do-bind
    -fwarn-tabs
    -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates
    -O2
  build-depends:
      base >=4.12 && <5
    , godot-haskell
    , linear
    , stm
    , text
    , vector
  default-language: Haskell2010

foreign-library demo
  type: native-shared
  other-modules: FLib
  hs-source-dirs: ffi/flib
  c-sources: ffi/cbits/flib.c
  build-depends:
      base >= 4.12 && <5
    , godot-haskell
    , demo
  default-language: Haskell2010


